<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@drawable/backgroundimg">

    <EditText
        android:id="@+id/etEmailR"
        android:layout_marginTop="100dp"
        android:drawableRight="@drawable/login_email"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="18dp"
        android:hint="@string/wprowadzEmail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPasswordR1"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/login_password"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="18dp"
        android:hint="@string/wprowadzHaslo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailR" />

    <EditText
        android:id="@+id/etPasswordR2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/login_password"
        android:ems="10"
        android:hint="@string/powtorzHaslo"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordR1" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="192dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:onClick="btnRegistration"
        android:text="@string/zarejestrujSie"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordR2" />

    <TextView
        android:id="@+id/tvHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/maszJuzKonto"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/tvHaveAcc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/maszJuzKonto2"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHaveAcc"
        app:layout_constraintVertical_bias="0.077" />
</androidx.constraintlayout.widget.ConstraintLayout>

