<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".AllDrugs">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wszystkieleki" />

    <TableLayout
        android:id="@+id/tableAllDrugs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="240dp"
        android:stretchColumns="0,1,2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:background="@color/grey_1"
            android:padding="5dp">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nazwaLeku"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dataWaznosciLeku"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnAddDrug"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:onClick="btnAddDrug"
        android:textSize="14dp"
        android:text="@string/dodajLek"
        app:layout_constraintEnd_toStartOf="@+id/btnRemoveDrug"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableAllDrugs" />

    <Button
        android:id="@+id/btnRemoveDrug"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/usunLek"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddDrug"
        app:layout_constraintTop_toBottomOf="@+id/tableAllDrugs" />

    <Button
        android:id="@+id/btnStartDrug"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:backgroundTint="@color/grey_1"
        android:text="@string/rozpDawkowanie"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/return_btn"
        android:onClick="returnClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/return_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>