<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".DosageActivity">


    <ImageButton
        android:id="@+id/btnReturn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="returnClicked"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        app:srcCompat="@drawable/return_btn" />


    <Button
        android:id="@+id/btnStartDosage"
        android:layout_width="152dp"
        android:layout_height="58dp"
        android:text="@string/startDosage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazwaLekuDawkowanie"
        app:layout_constraintVertical_bias="0.739" />

    <EditText
        android:id="@+id/etDosaged"
        android:layout_width="315dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/iloscDawek"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazwaLekuDawkowanie" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="303dp"
        android:layout_height="62dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/dataKoncaDawkowania"
        android:clickable="false"
        android:cursorVisible="false"
        android:datePickerMode="spinner"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btnStartDosage"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazwaLekuDawkowanie"
        app:layout_constraintVertical_bias="0.834" />

    <TextView
        android:id="@+id/nazwaLekuDawkowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:maxWidth="300dp"
        android:textSize="40sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />


</androidx.constraintlayout.widget.ConstraintLayout>
