<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".CompareTwoActivity">

    <ImageButton
        android:id="@+id/btnReturn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:onClick="btnReturnOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        app:srcCompat="@drawable/return_btn" />

    <EditText
        android:id="@+id/edtDrug1Name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/wprowad_nazw_pierwszego_leku"
        android:inputType="text"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableRight="@drawable/coll1"
        app:layout_constraintVertical_bias="0.141" />

    <EditText
        android:id="@+id/edtDrug2Name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/wrowad_nazw_drugiego_leku"
        android:inputType="text"
        android:textSize="18dp"
        android:drawableRight="@drawable/coll2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDrug1Name"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/btnCompareAPI"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="20dp"
        android:onClick="compareTwoClicked"
        android:text="@string/por_wnaj"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDrug2Name" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompareAPI" />


</androidx.constraintlayout.widget.ConstraintLayout>