<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".AddDrugToAll">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/dodaj_lek_do_apteczki" />

    <EditText
        android:id="@+id/etDrugName"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="60dp"
        android:drawableRight="@drawable/name_add_to_all"
        android:hint="@string/drugName"
        android:inputType="textPersonName"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/etDrugDateExp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="60dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:datePickerMode="spinner"
        android:drawableRight="@drawable/date_add_to_all"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/drugDateExp"
        android:inputType="date"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDrugName" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/return_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDrugDateExp"
        app:layout_constraintVertical_bias="0.494"
        app:srcCompat="@drawable/return_btn" />

    <Button
        android:id="@+id/btnAddDrugFinal"
        android:layout_width="192dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="70dp"
        android:text="@string/dodajLek2"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/etDrugDateExp"
        app:layout_constraintVertical_bias="0.493" />

</androidx.constraintlayout.widget.ConstraintLayout>
